--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-rate-limit": "^5.5.0",
+    "express-redis-cache": "^1.1.3",
     "http-errors": "~1.6.3",
+    "ioredis": "^4.28.0",
     "joi": "^17.4.2",
     "mongoose": "^6.0.11",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "rate-limit-redis": "^2.1.0"
   }
 }
